# ilovepdf

./: pyproject.toml
ILovePDF/: __main__.py  pdf.py  requirements.txt
ILovePDF/configs/: config.py
