[tool.poetry]
name = "nabilanavab/ilovepdf"
version = "5.0.1"
description = "Telegram PDF Bot.."
authors = ["Nabil A Navab <nabil.a.navab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python 
pyrogram 
tgCrypto 
pillow 
PyMuPdf 
PyPDF2 
convertapi 
pyromod 
fpdf 
ocrmypdf 
motor 
psutil 
pymongo = { version = " ", extras = ["srv"] }
hachoir 
pytelegrambotapi 
aiohttp 
aspose-words 
pdfkit 
beautifulsoup4 
requests 
arabic-reshaper 
python-bidi 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
